Implement users voted parameter in status response
